--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <div class="config-li">
             <label class="config-label">生成目录：</label>
             <div class="config-cell">
-              <input class="ui-input" name="build.pathHTML" value="build/" disabled size="8">
+              <input class="ui-input" name="build.pathHTML" value="build" disabled size="8">
             </div>
           </div>
           <div class="config-li">
