--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                 <option value="activity.qidian.com">activity.qidian.com</option>
                 <option value="acts.book.qq.com">acts.book.qq.com</option>
                 <option value="acts.qidian.com" selected>acts.qidian.com</option>
+                <option value="acts.readnovel.com">acts.readnovel.com</option>
               </select>
             </div>
           </div>
