--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,16 @@
 </head>
 <body>
 <h1>Hello, BoBo!</h1>
+
+<!-- 如果一本书同时起点和创世都能访问，data-bookid标记，起点id在前，创世id在后 -->
+<a href="//book.qidian.com/info/1004650252" data-bookid="1004650252,14650252">点击阅读</a>
+
+<!-- 如果使用jQuery，地址如下 -->
+<!-- <script src="https://qidian.gtimg.com/yuewen/v1/js/jquery.min.js"></script> -->
+
+<!-- 如果使用Zepto地址为 -->
+<!-- <script src="https://qidian.gtimg.com/yuewen/v1/js/zepto.min.js"></script> -->
+
+<script src="./js/script.js"></script>
 </body>
 </html>
