reset some style
font and line-height

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-<!-- 所有内容，包括背景图片，全部都使用一个div包裹，不要使用<body>标签，例如下面的bobo-container，为了和“静静工具”更好适配 -->
-<div class="bobo-container">
+<!-- 所有内容，包括背景图片，全部都使用一个div包裹，不要使用<body>标签，例如下面的bobo-wrap，为了和“静静工具”更好适配 -->
+<div class="bobo-wrap">
 	<h1>Hello, BoBo!</h1>
 
 	<!-- 如果一本书同时起点和创世都能访问，data-bookid标记，起点id在前，创世id在后 -->
