--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
+<!doctype html>
 <html>
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="format-detection" content="telephone=no">
     <meta name="keywords" content="">
