--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       <div class="config-li">
         <label class="config-label" for="projDir">项目目录：</label>
         <div class="config-cell">
-          <input class="ui-input" name="directory" id="projDir" required>
+          <input class="ui-input" name="directory" id="projDir" required result="5">
           <a href="javascript:" id="localDir" class="ui-button ml5" role="button">浏览</a>
           <p class="mt5 gray f12">会自动基于TapdID创建文件夹</p>
         </div>
@@ -183,6 +183,8 @@
   </script>
 
   <script src="lulu.js"></script>
+
+ <!--  <script src="https://qidian.gtimg.com/c/=/lulu/theme/modern/js/plugin/jquery.js,/lulu/theme/modern/js/common/ui/Follow.js,/lulu/theme/modern/js/common/ui/Loading.js,/lulu/theme/modern/js/common/ui/LightTip.js,/lulu/theme/modern/js/common/ui/ErrorTip.js,/lulu/theme/modern/js/common/ui/Dialog.js,/lulu/theme/modern/js/common/ui/Datalist.js,/lulu/theme/modern/js/common/ui/Select.js,/lulu/theme/modern/js/common/ui/Validate.js,/lulu/theme/modern/js/common/ui/Tips.js,/lulu/theme/modern/js/common/comp/Form.js"></script> -->
 
   <script>
   window.alert = function (text, type) {
