--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
   <script src="lulu.js"></script>
 
- <!--  <script src="https://qidian.gtimg.com/c/=/lulu/theme/modern/js/plugin/jquery.js,/lulu/theme/modern/js/common/ui/Follow.js,/lulu/theme/modern/js/common/ui/Loading.js,/lulu/theme/modern/js/common/ui/LightTip.js,/lulu/theme/modern/js/common/ui/ErrorTip.js,/lulu/theme/modern/js/common/ui/Dialog.js,/lulu/theme/modern/js/common/ui/Datalist.js,/lulu/theme/modern/js/common/ui/Select.js,/lulu/theme/modern/js/common/ui/Validate.js,/lulu/theme/modern/js/common/ui/Tips.js,/lulu/theme/modern/js/common/comp/Form.js"></script> -->
+ <!--  <script src="https://qidian.gtimg.com/c/=/lulu/theme/modern/js/plugin/jquery.js,/lulu/theme/modern/js/common/ui/Follow.js,/lulu/theme/modern/js/common/ui/Loading.js,/lulu/theme/modern/js/common/ui/LightTip.js,/lulu/theme/modern/js/common/ui/ErrorTip.js,/lulu/theme/modern/js/common/ui/Dialog.js,/lulu/theme/modern/js/common/ui/Datalist.js,/lulu/theme/modern/js/common/ui/Select.js,/lulu/theme/modern/js/common/ui/Validate.js,/lulu/theme/modern/js/common/ui/Tips.js,/lulu/theme/modern/js/common/ui/Drop.js,/lulu/theme/modern/js/common/comp/Form.js"></script> -->
 
   <script>
   window.alert = function (text, type) {
