--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                 <option value="acts.book.qq.com">acts.book.qq.com</option>
                 <option value="acts.qidian.com" selected>acts.qidian.com</option>
                 <option value="acts.readnovel.com">acts.readnovel.com</option>
+                <option value="acts.webnovel.com">acts.webnovel.com</option>
               </select>
             </div>
           </div>
