--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
               b. 静静对#shareBtn选择器做了display属性重置；
               c. 波波发布时候会注入一段JS代码，识别是否是app设备，如果是，会remove掉hidden属性使分享按钮显示。
          -->
-        <style type="text/css">.bobo-share{display:inline-block;}</style>
+        <style>.bobo-share{display:inline-block;}</style>
         <!-- 理论上，只有支持微信分享的页面，这个都需要保留，默认定位在页面右上角 -->
         <a href="javascript:" id="shareBtn" hidden="" class="bobo-share">分享</a>
     </div>
