--- a/index.html
+++ b/index.html
@@ -112,6 +112,8 @@
                 <option value="acts.qidian.com" selected>acts.qidian.com</option>
                 <option value="acts.readnovel.com">acts.readnovel.com</option>
                 <option value="acts.webnovel.com">acts.webnovel.com</option>
+                <option value="acts.xs8.cn">acts.xs8.cn</option>
+                <option value="acts.hongxiu.com">acts.hongxiu.com</option>
               </select>
             </div>
           </div>
